--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,37 +1,9 @@
 <resources>
-    <string name="app_name">WCF</string>
-    <string name="webiview_url">https://www.wcf.co.ke</string>
+    <string name="app_name">SHC</string>
+    <string name="powered_by_martdevelopers_inc">Powered By MartDevelopers Inc</string>
+    <string name="instructions">Tap Log In As Medical Expert Or Log In As Client</string>
+    <string name="doc_login">Log In As Doctor</string>
+    <string name="client_login">Log In As Client</string>
 
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-
-    <string name="admob_app_id"></string>
-    <string name="admob_banner_id"></string>
-    <string name="admob_interstitial_id"></string>
-
-
-    <string name="action_settings">Settings</string>
-    <string name="image_content">image</string>
-
-    <string name="please_wait">Please Wait..</string>
-    <string name="privacy_policy">Privacy Policy</string>
-
-
-    <!--<about us strings>-->
-    <string name="about_us_developer">Developer</string>
-    <string name="about_us_developer_name">DevLan</string>
-    <string name="about_us_email">Email</string>
-    <string name="about_us_email_text">devlanin@protonmail.com</string>
-    <string name="about_us_contact">Contact</string>
-    <string name="about_us_contact_text">"+254737229776</string>
-    <string name="about_us_about">About Us</string>
-    <string name="about">About</string>
-    <string name="about_description">All-In-One web-view app, we’ve tried to cover all necessary intents and links so that buyer can use this for their custom reference and build something more exciting than our app.User friendly UI and simple codes makes it easier for the developers to re-create from this code.</string>
-    <string name="sure_quit">Are you sure you want to quit?</string>
-    <string name="exit">Exit</string>
-    <string name="cancel">Cancel</string>
-    <!--<about us strings>-->
-    <string name="yes">Yes</string>
-    <string name="download_file">File Name :</string>
-    <string name="download_title">Do you want to download?</string>
+    <string name="todo">TODO</string>
 </resources>
