Hard Coded Text In Splash

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">WCF</string>
     <string name="powered_by_martdevelopers_inc">Powered By Devlan Inc</string>
+    <string name="world_christian_fellowship">World Christian Fellowship</string>
 </resources>
