--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">WCF</string>
     <string name="a_devlan_inc_production">Powered By DevLan Inc</string>
     <string name="world_christian_fellowship">World Christian Fellowship</string>
+    <string name="image_chooser">File Chooser</string>
 </resources>
