--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="a_devlan_inc_production">Powered By DevLan Inc</string>
     <string name="world_christian_fellowship">World Christian Fellowship</string>
     <string name="image_chooser">File Chooser</string>
+    <string name="no_internet_connection_found_n_please_check_your_connection">No Internet Connection Detected. \n Please Check Your Connection</string>
+    <string name="try_again">Try Again</string>
+    <string name="todo">TODO</string>
 </resources>
